# AutoInfo

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  autoinfo.db  pyproject.toml
.cursor/: mcp.json
.omo/: boulder.json
.omo/evidence/: config.yaml  sources.yaml  task-3-config.txt  task-4-init.txt  task-5-cli.txt  task-6-test-infra.txt  task-6-verification.txt  task-8-rss.txt
.omo/plans/: autoinfo-v0.1.md  autoinfo-v0.2-v1.0.md  autoinfo-v1.1.md  autoinfo-v1.2.md  fix-6-issues.md
.opencode/: mcp.json
.opencode/skills/: autoinfo-SKILL.md
docs/: autoinfo-validation-master-plan.md
docs/autoinfo-validation-master-plan-v2/: README.md  part-01-core-pipeline.md  part-02-cli-full.md  part-03-mcp-system-tools.md  part-04-mcp-kb-output.md  part-05-quality-gates.md  part-06-kb-pipeline.md  part-07-rest-api-webui.md  part-08-agent-e2e.md  part-09-async-cron-email.md  part-10-error-boundary.md  part-11-production-validation.md  part-12-final-verdict.md
docs/dev/: Hermes-KnowledgeBase-介绍.md  agent-alerting.md  founder-expectations.md
src/autoinfo/: __init__.py  cefr.py  collect.py  config.py  dedup.py  doctor.py  email_sender.py  embeddings.py  importer.py  kb.py  keywords.py  llm.py  models.py  output.py  process.py  qa.py  quality.py  schema.py  status.py  terminology.py  translation_qa.py
tests/: conftest.py  test_backward_compat.py  test_cli_commands.py  test_cli_remaining.py  test_cli_v2.py  test_collection.py  test_config_v2.py  test_cron.py  test_custom_extraction.py  test_demo_sources.py  test_digest.py  test_email_imap_handler.py  test_entry_versioning.py  test_errors.py  test_export.py  test_flag_kb.py  test_fts5.py  test_integration.py  test_kb.py  test_kb_draft.py  test_knowledge_graph.py  test_knowledge_graph_export.py  test_llm.py  test_mcp_full.py  test_mcp_init_project.py  test_mcp_server.py  test_mcp_v2.py  test_monitor.py  test_pdf_handler.py  test_process.py  test_process_batch.py  test_pubmed_handler.py  test_qa.py  test_quality.py  test_quality_g4.py  test_quality_g5.py  test_relations.py  test_report.py  test_rss_handler.py  test_source_crud.py  (+7 more)
tests/cassettes/: TestPubMedIntegration.test_fetch_returns_parsed_articles.yaml  TestPubMedIntegration.test_fetch_to_item_round_trip.yaml  atom-feed.yaml  (+6 more)
(+89 files in other folders)
